force-app/main/default/objects/Medical_Facility__c/fields/Facility_Address__c.field-meta.xml
<CustomField>
    <fullName>Facility_Address__c</fullName>
    <label>Facility Address</label>
    <type>Address</type>
</CustomField>