force-app/main/default/objects/Medical_Facility__c/fields/Facility_Hours__c.field-meta.xml
<CustomField>
    <fullName>Facility_Hours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility Hours</label>
    <referenceTo>Facility_Hours__c</referenceTo>
    <relationshipLabel>Medical Facilities</relationshipLabel>
    <relationshipName>Medical_Facilities</relationshipName>
    <type>Lookup</type>
</CustomField>