force-app/main/default/objects/Medical_Facility__c/fields/Opening_Hours__c.field-meta.xml
<CustomField>
    <fullName>Opening_Hours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opening Hours</label>
    <referenceTo>BusinessHours</referenceTo>
    <relationshipName>Medical_Facilities</relationshipName>
    <type>Lookup</type>
</CustomField>