force-app/main/default/objects/Medical_Facility__c/fields/Opening_Hours_Display__c.field-meta.xml
<CustomField>
    <fullName>Opening_Hours_Display__c</fullName>
    <formula>&quot;Poniedziałek: &quot; &amp; LEFT(TEXT(Opening_Hours__r.MondayStartTime), 5) &amp; &quot; - &quot; &amp; LEFT(TEXT(Opening_Hours__r.MondayEndTime), 5) &amp; BR() &amp;
&quot;Wtorek: &quot; &amp; LEFT(TEXT(Opening_Hours__r.TuesdayStartTime), 5) &amp; &quot; - &quot; &amp; LEFT(TEXT(Opening_Hours__r.TuesdayEndTime), 5) &amp; BR() &amp;
&quot;Środa: &quot; &amp; LEFT(TEXT(Opening_Hours__r.WednesdayStartTime), 5) &amp; &quot; - &quot; &amp; LEFT(TEXT(Opening_Hours__r.WednesdayEndTime), 5) &amp; BR() &amp;
&quot;Czwartek: &quot; &amp; LEFT(TEXT(Opening_Hours__r.ThursdayStartTime), 5) &amp; &quot; - &quot; &amp; LEFT(TEXT(Opening_Hours__r.ThursdayEndTime), 5) &amp; BR() &amp;
&quot;Piątek: &quot; &amp; LEFT(TEXT(Opening_Hours__r.FridayStartTime), 5) &amp; &quot; - &quot; &amp; LEFT(TEXT(Opening_Hours__r.FridayEndTime), 5) &amp; BR() &amp;
&quot;Sobota: &quot; &amp; LEFT(TEXT(Opening_Hours__r.SaturdayStartTime), 5) &amp; &quot; - &quot; &amp; LEFT(TEXT(Opening_Hours__r.SaturdayEndTime), 5) &amp; BR() &amp;
&quot;Niedziela: &quot; &amp; LEFT(TEXT(Opening_Hours__r.SundayStartTime), 5) &amp; &quot; - &quot; &amp; LEFT(TEXT(Opening_Hours__r.SundayEndTime), 5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opening Hours Display</label>
    <type>Text</type>
</CustomField>