force-app/main/default/objects/Medical_Facility__c/validationRules/Opening_Hours_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Opening_Hours_validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(Opening_Hours__c)) &amp;&amp; (
    NOT(REGEX(Opening_Hours__c, &quot;^(?:0?[0-9]|1[0-9]|2[0-3]):[0-5][0-9]-(?:0?[0-9]|1[0-9]|2[0-3]):[0-5][0-9]$&quot;))
    ||
    (
        VALUE(LEFT(Opening_Hours__c,2))*60 + VALUE(MID(Opening_Hours__c,4,2)) 
        &gt;=
        VALUE(MID(Opening_Hours__c,7,2))*60 + VALUE(RIGHT(Opening_Hours__c,2))
    )
)</errorConditionFormula>
    <errorDisplayField>Opening_Hours__c</errorDisplayField>
    <errorMessage>Enter opening hours in the format hh:mm-hh:mm, where the start time must be earlier than the end time.</errorMessage>
</ValidationRule>